--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -42,7 +42,14 @@ jobs:
 
       - name: Integration Tests
         run: mvn integration-test
-
+      
+      - name: Login to JFrog
+        uses: docker/login-action@v1
+        with:
+          registry: http://172.16.238.227:8082
+          username: ${{ secrets.JFROG_USER_WRITER }}
+          password: ${{ secrets.JFROG_PASSWORD_WRITER }}
+          
       # Build docker image for service
       - name: Build docker image
         uses: docker/build-push-action@v1
